# sentiment-service

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
kubernetes/: deployment.yaml  service.yaml
src/models/: content.py  payload.py  sentiment.py
