[tool.poetry]
name = "sp-sentiment-service"
version = "0.1.0"
description = ""
authors = ["Jason Adam <jason.adam@aptiveresources.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
vaderSentiment = "^3.3.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.3"
bandit = "^1.6.2"
mypy = "^0.782"
black = "^20.8b1"
isort = "^5.5.1"
pytest = "^6.0.1"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
